# dt26-t1

./: .gitignore  AGENTS.md  baselines.py  data.md  dataset.py  inference.py  main.py  model.py  overview.md  pyproject.toml  train.py  windowing.md
data/: coverage_report.txt  inverse_map.json  name_map.json  name_patches.json  text_phrases.json  text_phrases.txt  translate.py
