[project]
name = "task1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pypinyin>=0.55.0",
    "scipy>=1.18.0",
    "torch>=2.13.0",
    "torch-geometric>=2.8.0",
    "tqdm>=4.69.0",
]
